3주차 포트폴리오

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기획 및 개발</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기간별 프로젝트 진행</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기록을 통한 피드백</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="/about_detailed" target="_blank">상세 소개</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="/about_detailed" target="_blank">상세 소개</a> <!-- self사용으로 현재탭에서 열기-->
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
