4주차 - 연습문제 전

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -128,12 +128,12 @@
                             <h1 class="display-1 mb-0">23</h1>
                             <h5 class="mb-0">나이</h5>
                         </div>
-                        <h3 class="lh-base mb-0">1인 웹,앱개발ㅣ데이터를 활용한<br> 디지털마케팅ㅣ기획 및 설계</h3>
+                        <h3 class="lh-base mb-0">디지털 서비스 설계자로 성장하기 위한 DevWork Page<br> PMㅣ개발ㅣ마케팅</h3>
                     </div>
                     <p class="mb-4">일상 속 사용자의 불편을 줄여주는 개인 맞춤형 웹, 앱개발ㅣ 구글애널리틱스를 활용한 디지털마케팅ㅣ스토리텔링을 통한 퍼스널브랜딩 코칭</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기획 및 개발</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기간별 프로젝트 진행</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>기록을 통한 피드백</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>아이디어 및 기획</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>MVP 개발 및 운영</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>마케팅과 성장</p>
                     <a class="btn btn-primary py-3 px-5 mt-3" href="/about_detailed" target="_blank">상세 소개</a> <!-- self사용으로 현재탭에서 열기-->
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -167,9 +167,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5">Skills & Experience</h1>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum clita dolor duo clita sit.</p>
-                    <h3 class="mb-4">My Skills</h3>
+                    <h1 class="display-5 mb-5">기술 & 경험</h1>
+                    <p class="mb-4">서비스 기획+개발+마케팅 융합 전문가로 지속적으로 성장하기 위한 다양한 실전 프로젝트, 인턴십, 스타트업 경험을 쌓으면서 나만의 전문성을 꾸준히 키우는 전략을 구상하고 있습니다. </p>
+                    <h3 class="mb-4">스킬</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
