--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>블로그 게시판</title>
+    <title>블로그 게시판(new)</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link
       rel="stylesheet"
@@ -11,35 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-5">블로그 게시판</h1>
-
-      <!-- 게시글 추가 폼 -->
-      <div class="mt-4">
-        <h2>게시글 추가</h2>
-        <form th:action="@{/api/articles}" method="post" name="content">
-          <div class="form-group">
-            <label for="title">제목:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="title"
-              name="title"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="content">내용:</label>
-            <textarea
-              class="form-control"
-              id="content"
-              name="content"
-              rows="5"
-              required
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">추가</button>
-        </form>
-      </div>
+      <h1 class="mt-5">블로그 게시판(new)</h1>
 
       <!-- 게시글 리스트 -->
       <div class="mt-5">
@@ -49,32 +21,25 @@
             <tr>
               <th>ID</th>
               <th>제목</th>
-              <th>내용</th>
-              <th>버튼</th>
+              <th>작성자</th>
+              <th>작성일</th>
+              <th>조회수</th>
+              <th>좋아요</th>
             </tr>
           </thead>
           <tbody>
-            <tr th:each="article : ${articles}">
-              <td th:text="${article.id}"></td>
-              <td th:text="${article.title}"></td>
-              <td th:text="${article.content}"></td>
-              <!-- 수정/삭제 버튼 -->
+            <tr th:each="board : ${boards}">
+              <td th:text="${board.id}"></td>
               <td>
-                <a
-                  class="btn btn-warning"
-                  th:href="@{/article_edit/{id}(id=${article.id})}"
-                  >수정</a
-                >
-                <!-- 삭제 버튼 -->
-                <form
-                  th:action="@{/api/article_delete/{id}(id=${article.id})}"
-                  method="post"
-                  style="display: inline"
-                >
-                  <input type="hidden" name="_method" value="delete" />
-                  <button type="submit" class="btn btn-danger">삭제</button>
-                </form>
+                <a th:href="@{/board_view/{id}(id=${board.id})}">
+                  <span th:text="${board.title}"></span>
+                </a>
               </td>
+
+              <td th:text="${board.user}"></td>
+              <td th:text="${board.newdate}"></td>
+              <td th:text="${board.count}"></td>
+              <td th:text="${board.likec}"></td>
             </tr>
           </tbody>
         </table>
