--- a/src/main/resources/templates/board_list.html
+++ b/src/main/resources/templates/board_list.html
@@ -15,6 +15,20 @@
 
       <!-- 게시글 리스트 -->
       <div class="mt-5">
+        <!-- 게시글 검색창 -->
+        <form th:action="@{/board_list}" method="get" class="mt-4">
+          <div class="input-group">
+            <input
+              type="text"
+              name="keyword"
+              th:value="${keyword}"
+              class="form-control"
+              placeholder="검색어 입력..."
+            />
+            <button type="submit" class="btn btn-primary">검색</button>
+          </div>
+        </form>
+        <hr />
         <h2>게시글 목록</h2>
         <table class="table table-bordered">
           <thead>
@@ -40,6 +54,16 @@
               <td th:text="${board.newdate}"></td>
               <td th:text="${board.count}"></td>
               <td th:text="${board.likec}"></td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table-bordered">
+          <tbody>
+            <tr>
+              <td>
+                <!-- 글쓰기 버튼 -->
+                <a class="btn btn-warning" th:href="@{/board_write}">글쓰기</a>
+              </td>
             </tr>
           </tbody>
         </table>
