7주차 수정 연습문제(o)

--- a/src/main/resources/templates/board_edit.html
+++ b/src/main/resources/templates/board_edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>블로그 게시판</title>
+    <title>게시글 수정</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link
       rel="stylesheet"
@@ -13,15 +13,19 @@
     <div class="container">
       <h1 class="mt-5">블로그 게시판</h1>
 
-      <!-- 게시글 수정 폼 -->
       <div class="mt-4">
         <h2>게시글을 수정 합니다.</h2>
+
         <form
-          th:action="@{/api/article_edit/{id}(id=${article.id})}"
+          th:object="${article}"
+          th:action="@{/api/board_edit/{id}(id=*{id})}"
           method="post"
           name="content"
         >
           <input type="hidden" name="_method" value="put" />
+
+          <input type="hidden" th:field="*{id}" />
+
           <div class="form-group">
             <label for="title">제목:</label>
             <input
@@ -29,9 +33,11 @@
               class="form-control"
               id="title"
               name="title"
+              th:value="*{title}"
               required
             />
           </div>
+
           <div class="form-group">
             <label for="content">내용:</label>
             <textarea
@@ -40,9 +46,12 @@
               name="content"
               rows="5"
               required
+              th:text="*{content}"
             ></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">수정</button>
+
+          <button type="submit" class="btn btn-primary">수정 완료</button>
+          <a href="/board_list" class="btn btn-secondary">취소</a>
         </form>
       </div>
     </div>
