--- a/src/main/resources/templates/join_new.html
+++ b/src/main/resources/templates/join_new.html
@@ -129,9 +129,7 @@
                 </div>
 
                 <div class="text-center mt-3">
-                  <a href="/board_list" class="text-secondary"
-                    >메인으로 돌아가기</a
-                  >
+                  <a href="/login" class="text-secondary">메인으로 돌아가기</a>
                 </div>
               </form>
             </div>
